--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'io.springfox:springfox-swagger2:3+'
+    implementation 'io.springfox:springfox-swagger-ui:2+'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2+'
+    compileOnly 'org.projectlombok:lombok:1+'
 }
 
 test {
 	useJUnitPlatform()
+}
+springBoot {
+    mainClass = "com.mongodbdemo.onlinestore"
 }
