--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=online-store
 
 server.port=9090
+springdoc.swagger-ui.defaultmodelsexpanddepth=-1
